--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.1",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17"
